# mp4decrypt

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: tests.yml
examples/: decrypt.rs  split.rs
examples/split-sample/: segment-1.0190.m4s
src/: lib.rs  mp4decrypt.cpp  mp4split.cpp  mp4split.h
