[package]
name = "mp4decrypt"
version = "0.1.0"
description = "Decrypt mp4 streams in memory with Bento4 SDK"
authors = ["clitic <clitic21@gmail.com>"]
repository = "https://github.com/clitic/mp4decrypt"
documentation = "https://docs.rs/mp4decrypt"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["crypto"]
categories = ["cryptography"]
exclude = ["examples"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1"
# bindgen = "0.60.1"
