[package]
name = "mp4decrypt"
version = "0.1.2+1.6.0-639"
description = "Decrypt mp4 streams using Bento4"
authors = ["clitic <clitic21@gmail.com>"]
repository = "https://github.com/clitic/mp4decrypt"
documentation = "https://docs.rs/mp4decrypt"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["crypto"]
categories = ["cryptography"]
edition = "2021"
include = [
    "src/*",
    ".gitignore",
    ".gitmodules",
	"build.rs",
    "Cargo.toml",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "Bento4/Source/C++/Core/*",
    "Bento4/Source/C++/Codecs/*",
    "Bento4/Source/C++/Crypto/*",
    "Bento4/Source/C++/MetaData/*",
    "Bento4/Source/C++/System/StdC/*",
    "Bento4/Source/C++/System/Win32/Ap4Win32Random.cpp",
    "Bento4/Source/C++/System/Posix/Ap4PosixRandom.cpp",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1"
glob = "0.3"
# bindgen = "0.60.1"
